# mylib

./: README.md  RunConfigurations.sh  pyproject.toml  requirements.txt  setup.cfg
src/credentials/: __init__.py  credentials.py
src/credentials.egg-info/: PKG-INFO  SOURCES.txt
src/mylib/: __init__.py  __init__.txt  mylib.py
src/mylib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
