[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mylib"
version = "1.1.3"
authors = [ { name="Dennis Risen", email="dar5@case.edu" }, ]
description = "Utilities including credentials, error logging, and time conversion."
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
              ]
dependencies = [ "pytz>=2022.7", ]

[project.urls]
"Homepage" = "https://github.com/drisen/mylib"
"Bug Tracker" = "https://github.com/drisen/mylib/issues"
